<resources>
    <string name="app_name">Moon Timer</string>

    <string name="action_start">Starta!</string>
    <string name="action_stop">Stop</string>
    <string name="action_settings">Settings</string>
    <string name="action_normaltime">Normal Time</string>
    <string name="action_moontime">Moon Time</string>
    <!--<string name="action_heartbeat">Heartbeat</string>-->
    <string name="action_bell">Bell</string>
    <string name="action_reset">Reset</string>
    <string name="hello_world">Hello world!</string>
</resources>
