<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TimerActivity"
    android:background="#ff000000"
    android:keepScreenOn="true"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="5">

        <za.co.mosthighmountain.moontimer.AutoResizeTextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="00:00"
            android:textSize="500sp"
            android:id="@+id/timer_text"
            android:textColor="#ffffffff"
            android:layout_column="0"
            android:layout_span="1"
            android:singleLine="true"
            android:layout_weight="2"
            android:layout_gravity="top|center_horizontal"
            android:textAlignment="gravity"
            android:gravity="center_vertical|center_horizontal"
            android:ellipsize="none"
            android:maxLines="1" />
    </FrameLayout>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0">

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_weight="0">

        <Space
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_start"
            android:id="@+id/start_stop_button"
            android:onClick="startStopTimer"
            android:layout_column="2"
            android:typeface="sans" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_bell"
            android:id="@+id/bell_button"
            android:layout_column="3"
            android:onClick="testBell" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_reset"
            android:id="@+id/reset_button"
            android:layout_column="4"
            android:onClick="resetTimer" />

        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/imageButton"
            android:layout_column="5"
            android:src="@drawable/gear74"
            android:layout_gravity="center_vertical"
            android:scaleType="fitXY"
            android:padding="0dp"
            android:onClick="showSettingsActivity" />
    </TableRow>


</TableLayout>
